[gd_scene load_steps=2 format=3 uid="uid://dj3svrgbfxipi"]

[ext_resource type="Script" uid="uid://cy3o78dhsjy3u" path="res://scripts/Menu/lobby_menu.gd" id="1_4sbs5"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4sbs5")

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -213.0
offset_right = 326.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="GeustsContainer" type="VBoxContainer" parent="BackGround"]
layout_mode = 1
offset_right = 163.0
offset_bottom = 248.0

[node name="LobbyId" type="Label" parent="BackGround"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 25.0
offset_right = 85.0
offset_bottom = 56.0
grow_horizontal = 2
text = "Lobby_id: "
autowrap_mode = 2

[node name="StartGame" type="Button" parent="BackGround"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -82.0
offset_right = -32.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
text = "Start game"

[node name="TestMessage" type="Label" parent="BackGround"]
layout_mode = 0
offset_left = 7.0
offset_top = 278.0
offset_right = 456.0
offset_bottom = 419.0

[node name="Close" type="Button" parent="BackGround"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_bottom = 34.0
grow_horizontal = 0
text = "close"

[connection signal="pressed" from="BackGround/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="BackGround/Close" to="." method="_on_close_pressed"]
